--- a/.github/workflows/workflow_project_backend.yml
+++ b/.github/workflows/workflow_project_backend.yml
@@ -1,14 +1,43 @@
-name: Hello World
-on: 
+# This is a basic workflow to help you get started with Actions
+
+name: CI
+
+# Controls when the workflow will run
+on:
+  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: ["master"]
+    branches: [ "master" ]
   pull_request:
-    brnaches: ['master']
+    branches: [ "master" ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  hello:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Print Hello World
-      run: python -c "print('Hello, world!')"
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: echo Hello, world!
+
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
+          
+      #Adding pylint test, but first also installing requirements
+      - name: Run a pylint test
+        run: |
+          cd app
+          pip install -r requirements.txt
+          pylint application.py
